@startuml Farmacia

class Product{
    id  PK
    name : string
    slug : string
    Category : FK
    description : string
    price : decimal{0.2}
    stock : int
    photo: img
    timestamp: date

    }

class Category{
    id: PK
    slug: string
    name: string
}
class ShippingAddress{
    id : PK
    user : FK
    address : string
    city : string
    postal_code : regex {d4-d3}
    phone : regex {d9}  
    nif : regex {d9}
}

class Address{
    id : PK
    user : FK
    address : string
    city : string
    postal_code : regex {d4-d3}
    phone : regex {d9}  
    nif : regex {d9}
}
class User{
    id: PK
    first_name: string
    last_name: string
    email: string
    password: hash    
}
class Order{
    id: PK
    User: FK
    ShippingAdress: FK
    status: list
    Payment: FK
    date_added: date
    date_modified: date
    traking: int
    total: decimal{0.2}
    
}
class OrderProducts{
    Order: FK
    Product: FK
    quantity: int
}

class Cart{
    User: FK
    CartProduct: FK
    total: decimal{0.2} 
}
class CartProduct{
    Cart: FK
    Product: FK
    quantity: int
}

class Payment{
    id: PK
    card_number: int
    card_holder: string
    expiration_month: int{2}
    expiration_year: int{2}
    cvv: int

} 

Order "1" -- "1" Payment
Product "1" -- "n" OrderProducts
Order "1" -- "n" OrderProducts
Product "n" -- "1" Category
Cart "1" -- "n" CartProduct
Product "1" -- "n" CartProduct
Cart "1" -- "1" User
User "1" -- "n" Order
User "1" -- "1" Address
Order "1" -- "1" ShippingAddress

@enduml




